@@ -1,5 +1,11 @@
 2024-08-09  Charlie Zender  <zender@uci.edu>
 
+	* NCO 5.2.8-alpha02 release procedure:
+	cd ~/nco;git commit -a -m 'Version 5.2.8-alpha02: Clean Subaru';git push
+	git tag -a 5.2.8-alpha02 -m 'ncks --chk_map fix area_b dgn';git push --tags
+
+	* Print correct label and location for new grid diagnostics for area_b in nco_map_chk()
+
 	* NCO 5.2.8-alpha01 release procedure:
 	cd ~/nco;git commit -a -m 'Version 5.2.8-alpha01: Kia';git push
 	git tag -a 5.2.8-alpha01 -m 'Functionally identical to 5.2.7 and supports NC_STRING history attribute';git push --tags
